Fixed icon cutoff

--- a/_sass/base/_transformations.scss
+++ b/_sass/base/_transformations.scss
@@ -89,7 +89,7 @@
     }
 }
 .is-icon {
-    margin: 0 0 2rem 0;
+    margin: .2rem 0 2rem 0;
 }
 ul {
     &.is-unstyled-list {
