--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -1,8 +1,8 @@
 footer {
     margin: 4em 0;
     text-align: center;
-    span {
-        margin: 0 .5em;
+    .is-icon {
+        margin: .2rem .5rem 0;
         display: inline-block;
     }
 }
